[tool.poetry]
name="NebusTesting"
version="1.0"
description="Nebus test task"
authors=[]

[tool.poetry.dependencies]
python="^3.12"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
uvicorn = "^0.34.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.8"
pre-commit = "^3.8.0"


[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
exclude = ["constant.py"]
line-length = 120
lint.select = [
    "E",
    "F",
    "SIM",
    "W",
]

[tool.isort]
line_length = 120
py_version=312
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true

